GNOME Bugzilla – Bug 752300
After updating GES from 1.5.2 to Master complex timelines makes whole app to hang
Last modified: 2015-08-16 13:37:17 UTC
Reproducible using ges-launch-1.0. Will prepare .XGES soon.
+ Trace 235253
works in tag 1.5.2, not works in master
OK, weird, I have never seen that. Please provide a way to reproduce or at least a full backtrace.
I will try to provide a way to reproduce tonight. However, I attached backtrace to first message (description). It is g_mutex_lock call from ges_asset_cache_lookup function at ges-asset.c line 449.
I need to figure out where the lock is taken... that is why I need a trace with all threads.
Created attachment 307338 [details] [review] assets: Avoid deadlock when setting done initialising asset Avoid to hold the CACHE lock when setting the GTasks return values. Fixes
Created attachment 307339 [details] [review] assets: Avoid deadlock when done initialising asset Avoid to hold the CACHE lock when setting the GTasks return values. Fixes
@Kyrylo: Can you double check that fixes the issue?
Yes, I will do this tonight.
Agrrrr, this patches aren't applicable one by one.
Oh, understood. I should only apply second one.
No more deadlocks, thank you Thibault. Patch #2 works fine.
Review of attachment 307339 [details] [review]: This patch works for me. Have no deadlocks anymore.
Attachment 307339 [details] pushed as 724418b - assets: Avoid deadlock when done initialising asset